--- a/app/src/main/res/drawable/rounded_border_background.xml
+++ b/app/src/main/res/drawable/rounded_border_background.xml
@@ -3,5 +3,5 @@
     <corners android:radius="10dp" />
     <stroke
         android:width="1dp"
-        android:color="#808080" />
+        android:color="@color/blue" />
 </shape>
