--- a/app/src/main/res/layout/activity_explore_ads.xml
+++ b/app/src/main/res/layout/activity_explore_ads.xml
@@ -25,12 +25,22 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:id="@+id/favourite"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="40dp"
+        android:tint="@color/red"
+        android:src="@drawable/baseline_favorite_24" />
+
+    <ImageView
         android:id="@+id/settings"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="20dp"
         android:layout_marginTop="40dp"
+        android:layout_marginRight="20dp"
         android:src="@drawable/settings" />
 
 </RelativeLayout>
@@ -80,19 +90,36 @@
 
 
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="14dp"
-                android:layout_marginTop="14dp"
-                android:fontFamily="@font/texta_heavy"
-                android:gravity="left"
-                android:text="All Categories"
-                android:textColor="@color/black"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-                android:textSize="22dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="14dp"
+            android:layout_marginTop="14dp"
+            android:fontFamily="@font/texta_heavy"
+            android:text="All Categories"
+            android:textColor="@color/black"
+            android:textSize="22dp" />
 
-            <androidx.recyclerview.widget.RecyclerView
+        <TextView
+            android:id="@+id/see_category"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="14dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginRight="14dp"
+            android:fontFamily="@font/texta_bold"
+            android:text="See All"
+            android:textColor="@color/blue"
+            android:textSize="18dp" />
+
+    </RelativeLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/categories"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
