--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,52 +18,56 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="16dp"
-            android:fontFamily="sans-serif-black"
-            android:text="Markeety"
+            android:layout_marginTop="36dp"
+            android:fontFamily="@font/texta_heavy"
+            android:text="Welcome"
             android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textSize="66sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/texta_medium"
             android:layout_marginHorizontal="20dp"
             android:text="Your ultimate marketplace for buying and selling"
-            android:textSize="15sp" />
+            android:textSize="17sp" />
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_width="374dp"
+            android:layout_height="311dp"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="10dp"
-            android:scaleType="centerCrop"
+            android:layout_marginTop="40dp"
             app:srcCompat="@drawable/mainimg" />
 
         <Button
             android:id="@+id/exploreBtn"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="65dp"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="40dp"
-            android:backgroundTint="@color/secondary"
+            android:background="@drawable/btn_bg"
             android:onClick="switchToMainActivity"
-            android:text="Explore!"
+            android:text="Explore as Guest"
             android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textSize="22dp"
+            android:fontFamily="@font/texta_bold"/>
 
         <Button
             android:id="@+id/loginBtn"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="65dp"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:backgroundTint="@color/secondary"
+            android:background="@drawable/btn_bg"
+
             android:onClick="switchToLoginActivity"
-            android:text="Seller Login"
+            android:text="Continue with Email "
             android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textSize="22sp"
+
+            android:fontFamily="@font/texta_bold"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -71,6 +75,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginTop="20dp"
             android:gravity="center"
+            android:visibility="gone"
             android:orientation="horizontal">
 
             <TextView
