--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,29 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="@color/primary">
 
-    <ImageView
-        android:id="@+id/imageView"
+    <TextView
+        android:id="@+id/textView3"
         android:layout_width="match_parent"
-        android:layout_height="350dp"
-        android:layout_marginHorizontal="20dp"
-        android:src="@drawable/login"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="85dp"
+        android:layout_marginBottom="60dp"
+        android:fontFamily="@font/texta_heavy"
+        android:text="Login"
+        android:textColor="@color/black"
+        android:textSize="66dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/login_email"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+
+        android:background="@drawable/edit_bg"
+        android:paddingLeft="20dp"
+        android:drawableLeft="@drawable/baseline_email_24"
+        android:drawablePadding="13dp"
+        android:drawableTint="@color/black"
+        android:ems="10"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:hint="Email Address"
+        android:inputType="textEmailAddress"
+        android:textColor="@color/black"
+        android:textColorHint="#cccccc"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.539" />
 
     <EditText
         android:id="@+id/login_pwd"
-        android:layout_width="260dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#cccccc"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_margin="30dp"
+        android:background="@drawable/edit_bg"
         android:drawableLeft="@drawable/baseline_vpn_key_24"
         android:drawablePadding="13dp"
         android:drawableTint="@color/black"
@@ -32,6 +59,7 @@
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="#cccccc"
+        android:paddingLeft="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -39,32 +67,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.629" />
 
-    <EditText
-        android:id="@+id/login_email"
-        android:layout_width="260dp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#cccccc"
-        android:drawableLeft="@drawable/baseline_email_24"
-        android:drawablePadding="13dp"
-        android:drawableTint="@color/black"
-        android:ems="10"
-        android:hint="Email Address"
-        android:inputType="textEmailAddress"
-        android:textColor="@color/black"
-        android:textColorHint="#cccccc"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.539" />
-
     <Button
         android:id="@+id/signinbtn"
         android:layout_width="260dp"
         android:layout_height="57dp"
-        android:backgroundTint="@color/secondary"
-        android:onClick="login"
+        android:background="@drawable/btn_bg"
+        android:layout_gravity="center"
         android:text="SIGN IN"
         android:textSize="15dp"
         android:textStyle="bold"
@@ -75,6 +83,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.795"
         tools:ignore="UsingOnClickInXml" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/textView4"
@@ -82,7 +95,9 @@
         android:layout_height="wrap_content"
         android:text="Don't have an account?"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="16sp"
+        android:fontFamily="@font/texta_medium"
+        android:layout_gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.34"
@@ -96,9 +111,12 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:onClick="switchToRegisterActivity"
+        android:layout_gravity="center"
         android:text="Register"
-        android:textColor="@color/secondary"
-        android:textSize="18sp"
+        android:fontFamily="@font/texta_heavy"
+
+        android:textColor="#08626C"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,4 +124,5 @@
         app:layout_constraintStart_toEndOf="@+id/textView4"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.858" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+</LinearLayout>
