--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -11,8 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="20dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Update Profile"
+android:fontFamily="@font/texta_bold"        android:text="Update Profile"
         android:textColor="@color/black"
         android:textSize="28sp"
         android:textStyle="bold" />
@@ -20,9 +19,10 @@
     <EditText
         android:id="@+id/full_name_et"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#cccccc"
+        android:layout_height="60dp"
+        android:paddingLeft="13dp"
         android:hint="Full Name"
+        android:background="@drawable/edit_bg"
         android:inputType="text"
         android:textColor="@color/black"
         android:textColorHint="#cccccc"
@@ -31,9 +31,10 @@
     <EditText
         android:id="@+id/email_et"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginTop="10dp"
-        android:backgroundTint="#cccccc"
+        android:paddingLeft="10dp"
+        android:background="@drawable/edit_bg"
         android:enabled="false"
         android:focusable="false"
         android:focusableInTouchMode="false"
@@ -48,7 +49,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:backgroundTint="@color/secondary"
+        android:fontFamily="@font/texta_heavy"
+
+        android:background="@drawable/btn_bg"
         android:text="Update Profile"
         android:textColor="@color/white" />
 
@@ -60,14 +63,16 @@
         android:layout_marginBottom="20dp"
         android:text="Change Password"
         android:textColor="@color/black"
+        android:fontFamily="@font/texta_bold"
         android:textSize="28sp"
         android:textStyle="bold" />
 
     <EditText
         android:id="@+id/current_pwd_et"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#cccccc"
+        android:layout_height="60dp"
+        android:paddingLeft="10dp"
+        android:background="@drawable/edit_bg"
         android:hint="Current Password"
         android:inputType="textPassword"
         android:textColor="@color/black"
@@ -77,9 +82,11 @@
     <EditText
         android:id="@+id/new_pwd_et"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#cccccc"
+        android:layout_height="60dp"
+        android:paddingLeft="10dp"
+        android:background="@drawable/edit_bg"
         android:hint="New Password"
+        android:layout_marginTop="10dp"
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="#cccccc"
@@ -90,8 +97,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:backgroundTint="@color/secondary"
+        android:background="@drawable/btn_bg"
         android:text="Change Password"
+        android:fontFamily="@font/texta_heavy"
         android:textColor="@color/white" />
 
 </LinearLayout>
