--- a/app/src/main/res/layout/ad_list_adapter.xml
+++ b/app/src/main/res/layout/ad_list_adapter.xml
@@ -7,6 +7,7 @@
     android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp"
+    android:layout_margin="3dp"
     app:cardUseCompatPadding="true">
 
     <LinearLayout
@@ -35,8 +36,9 @@
                 android:layout_height="wrap_content"
                 android:text="Ad Title"
                 android:textColor="@color/black"
+                android:fontFamily="@font/texta_bold"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:layout_marginTop="15dp"/>
 
             <TextView
                 android:id="@+id/ad_category"
@@ -44,18 +46,22 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:text="Category"
+                android:fontFamily="@font/texta_medium"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
+                android:visibility="gone"
+
                 android:layout_marginVertical="4dp"
                 android:background="#cccccc" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:orientation="horizontal">
 
                 <Button
