--- a/app/src/main/res/layout/add_new_activity.xml
+++ b/app/src/main/res/layout/add_new_activity.xml
@@ -12,15 +12,29 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp">
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="15dp"
+            android:fontFamily="@font/texta_bold"
+            android:text="   Add Product"
+            android:textColor="@color/black"
+            android:onClick="backPress"
+            android:drawableStart="@drawable/baseline_arrow_back_ios_new_24"
+            android:textSize="36dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/uploadImageView"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:background="@drawable/rounded_border_background"
             android:padding="30dp"
-            android:src="@drawable/outline_file_upload_24"
-            app:tint="@color/secondary" />
+            android:src="@drawable/defualt_image"
+           />
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPagerImages"
@@ -126,6 +140,11 @@
             android:minHeight="48dp"
             android:paddingStart="10dp"
             android:paddingTop="5dp"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+
             android:textColor="@android:color/black" />
 
         <EditText
@@ -138,6 +157,11 @@
             android:minHeight="48dp"
             android:paddingStart="10dp"
             android:paddingTop="5dp"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+
             android:textColor="@android:color/black" />
 
         <EditText
@@ -148,6 +172,11 @@
             android:background="@drawable/rounded_border_background"
             android:hint="Time"
             android:minHeight="48dp"
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+
             android:paddingStart="10dp"
             android:paddingTop="5dp"
             android:textColor="@android:color/black" />
@@ -171,6 +200,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="12dp"
             android:backgroundTint="@color/black"
+            android:visibility="gone"
             android:text="Preview Ad"
             android:textColor="@color/white" />
 
