--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#0E0E0E</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#ffffff</color>
-    <color name="secondary">#FFA500</color>
+    <color name="secondary">#1297A5</color>
 
     <color name="darkBlue">#292f47</color>
     <color name="lightBlue">#303751</color>
