--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -67,6 +67,31 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.629" />
 
+    <TextView
+        android:id="@+id/forgotpassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="-20dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="30dp"
+        android:clickable="true"
+        android:fontFamily="@font/texta_bold"
+        android:gravity="end"
+        android:onClick="forgotPassword"
+
+        android:text=" Forgot Password?"
+        android:textColor="#08626C"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintStart_toEndOf="@+id/textView4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.858" />
+
     <Button
         android:id="@+id/signinbtn"
         android:layout_width="260dp"
@@ -112,11 +137,12 @@
         android:clickable="true"
         android:onClick="switchToRegisterActivity"
         android:layout_gravity="center"
-        android:text="Register"
+        android:layout_marginLeft="5dp"
         android:fontFamily="@font/texta_heavy"
 
         android:textColor="#08626C"
         android:textSize="16sp"
+        android:text=" Register"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
