--- a/app/src/main/res/layout/activity_seller_home.xml
+++ b/app/src/main/res/layout/activity_seller_home.xml
@@ -78,6 +78,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
                 android:background="@drawable/btn_bg"
                 android:backgroundTint="@color/white"
                 android:elevation="5dp"
@@ -119,6 +121,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
                 android:background="@drawable/btn_bg"
                 android:backgroundTint="@color/white"
                 android:elevation="5dp"
@@ -157,8 +161,10 @@
      <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:background="@drawable/btn_bg"
+         android:layout_marginTop="12dp"
+         android:layout_marginLeft="12dp"
+         android:layout_marginRight="12dp"
+         android:background="@drawable/btn_bg"
                 android:backgroundTint="@color/white"
                 android:elevation="5dp"
 
@@ -241,6 +247,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
                 android:background="@drawable/btn_bg"
                 android:backgroundTint="@color/white"
                 android:elevation="5dp"
