--- a/app/src/main/res/layout/activity_explore_ads.xml
+++ b/app/src/main/res/layout/activity_explore_ads.xml
@@ -7,9 +7,7 @@
     android:background="@color/background">
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-
-    >
+    android:layout_height="wrap_content">
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
@@ -69,7 +67,7 @@
             android:backgroundTint="@color/white"
             android:drawableStart="@drawable/baseline_youtube_searched_for_24"
             android:fontFamily="@font/texta_medium"
-            android:hint="  Search for products"
+            android:hint="  Search for Ads"
             android:padding="15dp"
 
             android:textSize="14dp" />
