--- a/app/src/main/res/layout/ad_list_adapter.xml
+++ b/app/src/main/res/layout/ad_list_adapter.xml
@@ -2,12 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="3dp"
     android:background="@drawable/rounded_border_background"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp"
-    android:layout_margin="3dp"
     app:cardUseCompatPadding="true">
 
     <LinearLayout
@@ -16,10 +16,12 @@
         android:orientation="horizontal"
         android:padding="2dp">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/ad_image"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:elevation="2dp"
+            android:layout_margin="12dp"
             android:scaleType="centerCrop"
             android:src="@drawable/mainimg" />
 
@@ -30,39 +32,66 @@
             android:layout_weight="1"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/ad_title"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/lay1"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Ad Title"
-                android:textColor="@color/black"
-                android:fontFamily="@font/texta_bold"
-                android:textSize="20sp"
-                android:layout_marginTop="15dp"/>
+                android:layout_below="@id/lay1"
+                android:layout_marginTop="25dp">
 
-            <TextView
-                android:id="@+id/ad_category"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/ad_title"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:fontFamily="@font/texta_heavy"
+                    android:text="Name"
+                    android:textColor="#000"
+                    android:textSize="17dp" />
+
+                     </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/lay2"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="Category"
-                android:fontFamily="@font/texta_medium"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:layout_below="@id/lay1">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:fontFamily="@font/texta_heavy"
+                    android:text="Company"
+                    android:textColor="#000"
+                    android:textSize="17dp" />
+
+                <TextView
+                    android:id="@+id/ad_category"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="25dp"
+                    android:fontFamily="@font/texta_medium"
+                    android:text="Atlantis"
+                    android:textColor="#000"
+                    android:textSize="17dp" />
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:visibility="gone"
-
                 android:layout_marginVertical="4dp"
-                android:background="#cccccc" />
+
+                android:background="#cccccc"
+                android:visibility="gone" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <Button
                     android:id="@+id/ad_message_button"
@@ -111,30 +140,37 @@
                 android:textColor="@color/white"
                 android:visibility="gone" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/approveBtn"
-                    android:layout_width="120dp"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="#008000"
-                    android:text="Approve"
-                    android:textColor="@color/white"
-                    android:visibility="gone" />
-
-                <Button
-                    android:id="@+id/disapproveBtn"
-                    android:layout_width="120dp"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="#8B0000"
-                    android:text="Reject"
-                    android:textColor="@color/white"
-                    android:visibility="gone" />
-            </LinearLayout>
 
         </LinearLayout>
+        <LinearLayout
+            android:layout_gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_marginEnd="15dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/approveBtn"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:backgroundTint="#008000"
+                android:src="@drawable/baseline_check_circle_24"
+                android:text="Approve"
+                android:layout_margin="10dp"
+                android:textColor="@color/white"
+                android:visibility="gone" />
+            <ImageView
+                android:id="@+id/disapproveBtn"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:backgroundTint="#008000"
+                android:src="@drawable/baseline_cancel_24"
+                android:layout_margin="10dp"
+                android:text="Approve"
+                android:textColor="@color/white"
+                android:visibility="gone" />
+
+        </LinearLayout>
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
